--- a/app/views/book/new.html.erb
+++ b/app/views/book/new.html.erb
@@ -1,6 +1,10 @@
+<h1>Books</h1>
+
+<%= form_with model: @list, url: '/lists', method: :post do |f| %>
+
 <h1>New book</h1>
 <!-- form_with部分 -->
-<%= form_with model: Book.new do |f| %>
+<%= form_with model: @book.new do |f| %>
   <h4>Titele</h4>
   <%= f.text_field :title %>
 
