--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,10 +1,10 @@
-<h1>Books</h1>
+’<h1>Books</h1>’
 
-<%= form_with model: @book, url: '/book', method: :post do |f| %>
+<%= form_with model: @books, url: '/book', method: :post do |f| %>
 
 <h1>New book</h1>
 
-<%= form_with model: @book.new do |f| %>
+<%= form_with model: @books , url:'/books',method::post do |f| %>
   <h4>Titele</h4>
   <%= f.text_field :title %>
 
