--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,8 +14,8 @@
        <td><%= book.title %></td>
        <td><%= book.body %></td>
        <td><%= link_to "show", books_show_path %></td>
-       <td><%= link_to "Edit","/edit_path"%></td>
-       <td><%= link_to "Destroy","/destroy_path"%></td>
+       <td><%= link_to "Edit", books_edit_path %></td>
+       <td> "Destroy"</td>
     </tr>
   <%end%>
   </tbody>
