--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,12 @@
 <strong>Title:</strong>
+<p><%= @book.title %></p>
+
 <strong>body</strong>
+<p><%= @book.body %></p>
+
+
+
+
+<%= link_to Edit,"books_edit_path" %>
+"|"
+<%= link_to Back,"books_index_path" %>
