--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,9 +4,6 @@
 <strong>body</strong>
 <p><%= @book.body %></p>
 
-
-
-
-<%= link_to Edit,"books_edit_path" %>
+<%= link_to "Edit", edit_book_path(@book) %>>
 "|"
-<%= link_to Back,"books_index_path" %>
+<%= link_to "Back",books_index_path %>
