--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,7 @@
        <td><%= book.body %></td>
        <td><%= link_to "show", book_path(book) %> </td>
        <td><%= link_to "Edit", edit_book_path(book) %>> </td>
-       <td> "Destroy"</td>
+       <td><%= link_to "Destroy",destroy_book_path(book), method: :delete %></td>
     </tr>
   <%end%>
   </tbody>
