--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,13 +1,18 @@
 <h1>Editing Book</h1>
 
-<%= form_with model: @book do |f| %>
+<%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
+
   <h4>Titele</h4>
   <%= f.text_field :title %>
+  
   <h4>Body</h4>
   <%= f.text_area :body %>
+  
   <%= f.submit 'Update Book' %>
+  
 <% end %>
 
-<%= link_to "show",book_path(@book) %>
+<%= link_to "show", book_path(@book) %>
 "|"
-<%= link_to "Back",books_index_path %>
+<%= link_to "Back", books_index_path %>
+
