--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,8 @@
 <h1>Books</h1>
+<h2>
+    <%= flash[:notice] %>
+</h2>
+
 
 <table>
   <thead>
@@ -7,7 +11,8 @@
       <th>Body</th>
       <th colspan ="3"></th>
     </tr>
-  </thead>
+　</thead>
+
   <tbody>
   <% @books.each do |book| %>
     <tr>
@@ -23,6 +28,13 @@
 
 
 <h1>New book</h1>
+<!--<% if @book.errors.any? %>-->
+<!--　　エラーが発生しました。-->
+<!--　<% @book.errors.full_massages.each do |massage| %>-->
+<!--　   <p><%= massage %></p>-->
+<!--  <% end %>-->
+<!--<%end%>-->
+
 <%= form_with model: @book do |f| %>
   <h4>Titele</h4>
   <%= f.text_field :title %>
@@ -30,4 +42,3 @@
   <%= f.text_area :body %>
   <%= f.submit 'Create Book' %>
 <% end %>
-
