--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -5,4 +5,4 @@
   <strong>Bookers</strong>
   ”では、さまざまな書籍に関するあなたの意見や”</p>
   <p>”印象を共有し交換することができます。”</p>
-<a herf="/books">start</a>
+<a herf= books_index > start </a>
