--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,18 @@
 <h1>Editing Book</h1>
+<h2>
+    <%= flash[:notice] %>
+</h2>
 
-<%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
+<% if @book.errors.any? %>
+　　<%= @book.errors.count %>件のエラーが発生しました
+　<ul>
+　<% @book.errors.full_messages.each do |message| %>
+　   <li><%= message %></li>
+  <% end %>
+  </ul>
+<%end%>
 
+<%= form_with model: @book do |f| %>
   <h4>Titele</h4>
   <%= f.text_field :title %>
   
@@ -14,5 +25,5 @@
 
 <%= link_to "show", book_path(@book) %>
 "|"
-<%= link_to "Back", books_index_path %>
+<%= link_to "Back", books_path %>
 
