--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,6 @@
     <%= flash[:notice] %>
 </h2>
 
-
 <table>
   <thead>
     <tr>
@@ -20,7 +19,7 @@
        <td><%= book.body %></td>
        <td><%= link_to "show", book_path(book) %> </td>
        <td><%= link_to "Edit", edit_book_path(book) %>> </td>
-       <td><%= link_to "Destroy",destroy_book_path(book), method: :delete %></td>
+       <td><%= link_to "Destroy",book_path(book), method: :delete %></td>
     </tr>
   <%end%>
   </tbody>
@@ -28,12 +27,15 @@
 
 
 <h1>New book</h1>
-<!--<% if @book.errors.any? %>-->
-<!--　　エラーが発生しました。-->
-<!--　<% @book.errors.full_massages.each do |massage| %>-->
-<!--　   <p><%= massage %></p>-->
-<!--  <% end %>-->
-<!--<%end%>-->
+
+<% if @book.errors.any? %>
+　　<%= @book.errors.count %>件のエラーが発生しました
+　<ul>
+　<% @book.errors.full_messages.each do |message| %>
+　   <li><%= message %></li>
+  <% end %>
+  </ul>
+<%end%>
 
 <%= form_with model: @book do |f| %>
   <h4>Titele</h4>
