--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,14 @@
-<h1>ようこそ</h1>
+<body>
+  
+<h1>ようこそ
 <strong>Bookers</strong>
-"へ"
+へ</h1>
+
 <p>
   <strong>Bookers</strong>
   ”では、さまざまな書籍に関するあなたの意見や”</p>
   <p>”印象を共有し交換することができます。”</p>
-<a herf= books_index > start </a>
+<p>
+  <a href= "books" > start </a>
+</p>
+</body>
