--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,7 +4,7 @@
 </h2>
 
 <% if @book.errors.any? %>
-　　<%= @book.errors.count %>件のエラーが発生しました
+　　<%= @book.errors.count %>errors prohibited this book from being saved:
 　<ul>
 　<% @book.errors.full_messages.each do |message| %>
 　   <li><%= message %></li>
@@ -15,12 +15,12 @@
 <%= form_with model: @book do |f| %>
   <h4>Titele</h4>
   <%= f.text_field :title %>
-  
+
   <h4>Body</h4>
   <%= f.text_area :body %>
-  
+
   <%= f.submit 'Update Book' %>
-  
+
 <% end %>
 
 <%= link_to "show", book_path(@book) %>
