--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -29,7 +29,7 @@
 <h1>New book</h1>
 
 <% if @book.errors.any? %>
-　　<%= @book.errors.count %>件のエラーが発生しました
+　　<%= @book.errors.count %> errors prohibited this book from being saved:
 　<ul>
 　<% @book.errors.full_messages.each do |message| %>
 　   <li><%= message %></li>
@@ -38,7 +38,7 @@
 <%end%>
 
 <%= form_with model: @book do |f| %>
-  <h4>Titele</h4>
+  <h4>Title</h4>
   <%= f.text_field :title %>
   <h4>Body</h4>
   <%= f.text_area :body %>
